[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvnn"
version = "0.0.1"
authors = [
    { name="Alex Choi", email="choialex@uw.edu" },
]
description = "Basic cvnn construction and visualization"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.hatch.build.targets.wheel]
packages = ["src/cvnn"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = [ "src" ]
